# formlessness

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  dodo.py  index.html  mkdocs.yml  pre.py  pyproject.toml  requirements.txt  setup.sh  tox.ini
.github/: CODEOWNERS  codecov.yml  requirements.txt
.github/workflows/: codeql-analysis.yml  docs.yml  format.yml  publish.yml  python-test.yml  scorecards.yml  test.yml  tests.yml  update-dependencies.yml
formlessness/: __init__.py  abstract_classes.py  base_classes.py  constraints.py  deserializers.py  displayers.py  exceptions.py  fields.py  forms.py  new_forms.py  sections.py  serializers.py  types.py  utils.py  validators.py  views.py  widgets.py
schemas/: basic_form.json
tests/: basic_schema.json  test_basic_form.py  test_constraints.py  test_fields.py  test_forms.py  test_list_form.py  utils.py
