[tool.poetry]
name = "formlessness"
version = "0.1.0"
description = ""
authors = ["Travis Jungroth <jungroth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.3"
coverage = {extras = ["toml"], version = "^6.4.1"}
pre-commit = "^2.19.0"
jsonschema = "^4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.coverage.run]
branch = true
source_pkgs = ["formlessness"]
source = ["tests"]

[tool.isort]
profile = "black"
py_version = "auto"
force_single_line = true
