[tool.poetry]
name = "formlessness"
version = "0.1.0"
description = ""
authors = ["Travis Jungroth <jungroth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^8.5.11"
coverage = {extras = ["toml"], version = "^6.5.0"}
pre-commit = "^2.21.0"
jsonschema = "^4.17.3"
pytest-cov = "^3.0.0"
isort = "^5.12.0"
black = "^22.12.0"
pytest-phmdoctest = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --phmdoctest"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source_pkgs = ["formlessness"]
source = ["tests"]

[tool.isort]
profile = "black"
py_version = "auto"
force_single_line = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
